@@ -437,7 +437,6 @@ a:hover, .g-dim a:hover, .g-message a:hover, .g-content-popup a:hover, .g-popup 
 }
 
 .g-tabset a {
-    color: #000;
     background-color: #fff;
 }
 
