@@ -197,7 +197,7 @@ if ($navigator["maxPages"] > 1) {
 </form>
 <?php endif ?>
 <?php else : ?>
-<div class="g-information center"><?php echo $va_notice; ?></div>
+<div class="g-information center g-message"><?php echo $va_notice; ?></div>
 <?php endif ?>
 
 <?php if ($displayCommentLegend) :?>
