@@ -1,3 +1,9 @@
+2007-10-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b109
+
+ * Fix: Subalbum-tree did not work when subalbum name started with a number.
+
+ * Change: Jenskin and Blackskin nicifies.
+
 2007-09-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b108
 
  * Fix: Download icon in thumbsview was missing.
